.provarCaches/00D410000011HE0EAM/objects/asp04__Refund__c.object
<CustomObject>
    <fields>
        <fullName>asp04__Amount__c</fullName>
        <inlineHelpText>The amount of the refund.</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>asp04__Asperato_Reference__c</fullName>
        <inlineHelpText>A unique reference to the payment transaction generated by Asperato and reflected through to the payment gateway.</inlineHelpText>
        <label>Asperato Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Direct_Debit_Error_Code__c</fullName>
        <inlineHelpText>In the event of a direct debit payment failure this will show the detailed error code that was sent from either BACS or SEPA indicating the reason for failure.</inlineHelpText>
        <label>Direct Debit Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Error_Code__c</fullName>
        <inlineHelpText>This is a santised error code that is created by Asperato when a transaction fails. It is based on the data that is returned from the Payment Service Provider(s). The actual codes are recorded in the Sanitised responses section of this document.</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__PSP_Reference__c</fullName>
        <inlineHelpText>A reference to the payment generated by the payment gateway.</inlineHelpText>
        <label>Payment Service Provider Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Payment_Date__c</fullName>
        <inlineHelpText>The date on which the payment is either expected to clear or was cleared.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Payment_Route__c</fullName>
        <inlineHelpText>The payment route used for this refund</inlineHelpText>
        <label>Payment Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>asp04__Payment_Route_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Payment__c</fullName>
        <inlineHelpText>The Salesforce ID that links the refund to the original payment</inlineHelpText>
        <label>Payment</label>
        <referenceTo>asp04__Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>asp04__Refund_Stage_Description__c</fullName>
        <inlineHelpText>A descriptive text showing the reason related to the current refund stage. Might contain the reason for failure, for example.</inlineHelpText>
        <label>Refund Stage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Refund_Stage__c</fullName>
        <inlineHelpText>The status of the refund transaction.</inlineHelpText>
        <label>Refund Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                    <label>Processing</label>
                </value>
                <value>
                    <fullName>Refunded to customer</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Refund</label>
    <nameField>
        <displayFormat>RF-{000000000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>